# SmoothTrack-PX4.1

./: .clang-format  README.md  change_point.txt  data.txt  flow.txt  kill_camera_user.sh  kill_camera_users.sh  log.txt  pyproject.toml  run.sh  trackyolo_inference.cpp  yoloonly_inference.cpp
.github/workflows/: cpp-ci.yaml  lint.yaml
Docker/: Dockerfile  Makefile  run.sh
Docker/setup_udev/: 99-arduino.rules  99-brio100.rules  99-realsense-libusb.rules  brio100-setup@.service  setup_udev.sh
SmoothTrack/hw_px3/: package.xml  setup.py
SmoothTrack/hw_px3/hw_px3/: gui_calibrate.py
SmoothTrack/px2/: package.xml
SmoothTrack/px2/include/: composition_tool.h  inference.h  tracker_tool.h  utils.h
SmoothTrack/px3_launch/: package.xml  setup.cfg  setup.py
arduino/: sg5010servo.ino
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: AbsResult.msg
deadband/: run.sh
deadband/hw_px3/: setup.py
deadband/hw_px3/hw_px3/: main.py
deadband/include/: inference.h
deadband/px3_launch/launch/: px3_system_launch.py
deadband/src/: inference.cpp
doc/: design.txt  px3_report.txt  report.txt  report1.txt  report2.txt  report3.txt
doc/camera_test/: camera_fps_exposure.py  gui_backlash_test.py  report.txt
doc/fov/: camera_fov.yaml  report.txt
hw_px3/: setup.py
hw_px3/hw_px3/: gui_backlash_test.py  gui_calibrate.py  main.py
hw_px3_cpp/: CMakeLists.txt  package.xml
hw_px3_cpp/include/hw_px3_cpp/: px3_node.h
hw_px3_cpp/src/: main.cpp  px3_node.cpp
latest/: Run.sh  inference_simple.cpp  inference_simple.h  main.py
performcheck/: inference.cpp  inference_logtxt.cpp  log.txt  main.py
px2/: CMakeLists.txt  package.xml
px2/include/: composition_tool.h  inference.h  sort_tracker.h  tracker_tool.h  utils.h  yolo_inference.h
px2/src/: inference.cpp  yolo_inference.cpp
px3_launch/: setup.py
px3_launch/launch/: px3_system_launch.py
