<?xml version="1.0"?>
<package format="3">
  <name>hw_px3_cpp</name>
  <version>0.0.1</version>
  <description>C++ hw_px3</description>
  <maintainer email="developer@todo.todo">developer</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
